--- a/assests/style.css
+++ b/assests/style.css
@@ -1,16 +1,14 @@
-body{
+body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-
-
-.navbar-container{
+.navbar-container {
     display: flex;
     position: fixed;
-    width:100%;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     height: 10vh;
@@ -19,34 +17,32 @@ body{
     padding-right: 1vw;
 }
 
-.nav-logo{
+.nav-logo {
     display: flex;
     max-height: 8vh;
-    
 }
 
-.elements{
+.elements {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-left: 10vw;
 }
 
-.element{
+.element {
     display: inline-block;
     margin-right: 3vw;
     font-size: larger;
-    
 }
 
-.nav-search{
+.nav-search {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 2vw;
 }
 
-.search-icon{
+.search-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,33 +50,62 @@ body{
     height: 10vh;
 }
 
-
-.vertical-menu-1{
-    width:100%;
-    height: 50vh;
-    overflow-y: auto;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    border: 1px solid black;
-    white-space:nowrap;
-    display: flex;
-    align-items: center;
+.burger-menu {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
-.menu-1{
+.mobile-menu {
+    display: none;
+    background-color: aqua;
+    position: fixed;
+    top: 10vh;
+    width: 100%;
+    height: 90vh;
+    padding: 1vw;
+    box-sizing: border-box;
+    z-index: 1000;
+}
+
+.mobile-elements {
     list-style-type: none;
     padding: 0;
-    margin: 0;   
-    display: inline-flex;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-.menu-1 li{
-    display: inline-block;
-    margin: 0 10px;
+.mobile-element {
+    margin: 10px 0;
 }
 
-.menu-1 li img{
-    height: 20vh;
-    width: auto;
-    border-radius: 2px;
+.mobile-element a {
+    text-decoration: none;
+    color: black;
+    font-size: larger;
+}
+
+.hidden {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .navbar-container {
+        justify-content: space-between;
+    }
+
+    .nav-menu, .nav-search {
+        display: none;
+    }
+
+    .burger-menu {
+        display: block;
+    }
+
+    .mobile-menu.active {
+        display: block;
+    }
 }
