--- a/assests/style.css
+++ b/assests/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
@@ -12,9 +16,10 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 10vh;
-    background-color: aqua;
+    background-color:#007BFF;
     padding-left: 1vw;
     padding-right: 1vw;
+    border-bottom: 0.1vh solid black;
 }
 
 .nav-logo {
@@ -92,6 +97,111 @@ body {
     display: none;
 }
 
+
+
+.content-container{
+    position: absolute;
+    background-color: #f6f4fa;
+    top: 10vh;
+    width: 100%;
+    height: 90vh;
+}
+
+.scroll-container {
+    display: flex;
+    align-items: center;
+}
+
+.characters{
+    background-color: rgba(178, 180, 180, 0.499);
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
+}
+
+.game-scroll{
+    width: 100%;
+}
+
+.character-scroll {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none; /* For Firefox */
+    margin-left: 1vw;
+    margin-right: 1vw;
+    background-color: #f0f0f0;
+    
+}
+
+.character-scroll::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+}
+
+.inline-block {
+    flex-shrink: 0; /* Prevent shrinking of the images */
+    width: auto;
+}
+
+
+.scroll-button {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    color: #000000;
+    font-size: 30px;
+    font-weight: 700;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.scroll-button:hover {
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.scroll-1{
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none; 
+    top: 10vh;
+    border-radius: 10px;
+    width: 100%;
+    height: 50vh;
+    padding-top: 5vh;
+}
+
+.scroll-1::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+}
+
+
+.game-cover{
+    width: 28vw;
+    height: 15vw;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 768px) {
     .navbar-container {
         justify-content: space-between;
@@ -109,3 +219,6 @@ body {
         display: block;
     }
 }
+
+
+
